# cat-fact-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  cat-facts.py  formatters.py  models.py  pyproject.toml  requirements.txt  resources.py  setup.py
.github/workflows/: docker.yml
cat_facts/: cat_facts.py  formatters.py  models.py  resources.py
tests/: test_cat_facts.py
