[tool.poetry]
name = "cat-facts"
version = "2.1.1"
description = "An API that produces a list of facts about cats!"
authors = ["Alex Wootton <agwootton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask_restful = "^0.3.8"
click = "^7.1.2"
flask = "^1.1.2"
peewee = "^3.13.3"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
pytest = "^5.4.3"

[tool.poetry.scripts]
cat-facts = 'cat_facts'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
